# QGnomePlatform

./: .clang-format  CMakeLists.txt  README.md  qgnomeplatform.pro
.github/workflows/: build.yaml  build.yml  clang-format-check.yaml
cmake/modules/: FindGSettingSchemas.cmake
common/: common.pro  gnomehintssettings.cpp  gnomehintssettings.h  qgtk3dialoghelpers.cpp  qxdgdesktopportalfiledialog.cpp
decoration/: decoration.pro  decorationplugin.cpp  qgnomeplatformdecoration.cpp  qgnomeplatformdecoration.h
src/: CMakeLists.txt  gnomehintssettings.cpp  gnomehintssettings.h  gnomeproxystyle.cpp  gnomeproxystyle.h  platformplugin.cpp  platformplugin.h  qgnomeplatform.json  qgnomeplatformtheme.cpp  qgnomeplatformtheme.h  qgtk3dialoghelpers.cpp
src/color-schemes/: Adwaita.colors  AdwaitaDark.colors  AdwaitaHighcontrast.colors  AdwaitaHighcontrastInverse.colors  CMakeLists.txt
src/common/: CMakeLists.txt  gnomehintssettings.cpp  gnomehintssettings.h  gnomesettings.cpp  gnomesettings.h  gnomesettings_p.h  gsettingshintprovider.cpp  gsettingshintprovider.h  hintprovider.cpp  hintprovider.h  portalhintprovider.cpp  portalhintprovider.h  qgtk3dialoghelpers.cpp  qgtk3dialoghelpers.h  utils.cpp  utils.h
src/decoration/: CMakeLists.txt  decorationplugin.cpp  decorationplugin.h  qgnomeplatformdecoration.cpp  qgnomeplatformdecoration.h  qgnomeplatformdecoration.json
src/theme/: CMakeLists.txt  platformplugin.cpp  platformplugin.h  qgnomeplatformtheme.cpp  qgnomeplatformtheme.h  qgnomeplatformtheme.json  qgtk3dialoghelpers.cpp  qgtk3dialoghelpers.h  qgtk4dialoghelpers.cpp  qgtk4dialoghelpers.h  qxdgdesktopportalfiledialog.cpp  qxdgdesktopportalfiledialog_p.h
theme/: platformplugin.h  qgnomeplatformtheme.cpp  qgnomeplatformtheme.h  theme.pro
